# bevy_terminal_shader

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/shaders/: terminal.wgsl  video-glitch.wgsl
examples/: cube.rs  quad.rs
src/: lib.rs
